--- a/index.html
+++ b/index.html
@@ -38,63 +38,63 @@
         <p>This are some pictures I didn't take.</p>
       </div>
       <div class="row">
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image1">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image2">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image3">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image4">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image5">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image6">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image7">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image8">
 
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6 col-xs-12">
           <div class="thumbnail">
             <div class="image image9">
 
