--- a/index.html
+++ b/index.html
@@ -2,56 +2,110 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>Purrfect Match</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Image Gallery</title>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+  		<div class="container">
+  			<div class="navbar-header">
+  				 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+  	        <span class="sr-only">Toggle navigation</span>
+  	        <span class="icon-bar"></span>
+  	        <span class="icon-bar"></span>
+  	        <span class="icon-bar"></span>
+  	      </button>
+  				<a href="#" class="navbar-brand"><i class="far fa-image"></i> Canete</a>
+  			</div>
+  			<div class="collapse navbar-collapse" id="bs-nav-demo">
+  				<ul class="nav navbar-nav">
+  					<li><a href="#">About</a></li>
+  					<li><a href="#">Contact</a></li>
+  				</ul>
+  				<ul class="nav navbar-nav navbar-right">
+  					<li><a href="#">Sign Up</a></li>
+  					<li><a href="#">Login</a></li>
+  				</ul>
+  			</div>
+  		</div>
+  	</nav>
 
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-     <div class="container">
-       <div class="navbar-header">
-         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-           <span class="sr-only">Toggle navigation</span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-         <a class="navbar-brand" href="#">Purrfect Match</a>
-       </div>
-       <div id="navbar" class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-           <li class="active"><a href="#">Home</a></li>
-           <li><a href="#about">About</a></li>
-           <li><a href="#contact">Contact</a></li>
-         </ul>
-         <ul class="nav navbar-nav navbar-right">
-           <li><a href="#">Signup  <i class="fa fa-user-plus"></i></a></li>
-           <li><a href="#about">Login  <i class="fa fa-user"></i></a></li>
-         </ul>
-       </div>
-     </div>
-    </nav>
     <div class="container">
+      <div class="jumbotron">
+        <h1><i class="fas fa-camera-retro"></i> Image Gallery</h1>
+        <p>This are some pictures I didn't take.</p>
+      </div>
       <div class="row">
-        <div class="cl-lg-12">
-          <div id="content">
-              <h1>Purrfect Match!</h1>
-              <h3>The only human-feline dating app</h3>
-              <hr>
-              <button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started!</button>
-           </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image1">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image2">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image3">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image4">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image5">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image6">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image7">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image8">
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 col-xs-12">
+          <div class="thumbnail">
+            <div class="image image9">
+
+            </div>
           </div>
         </div>
       </div>
+    </div>
 
-
-
-
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
-      <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
