--- a/index.html
+++ b/index.html
@@ -2,112 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-    <title>Image Gallery</title>
+    <link rel="stylesheet" href="scoreKeep.css">
+    <title>Score Keeping</title>
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-  		<div class="container">
-  			<div class="navbar-header">
-  				 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
-  	        <span class="sr-only">Toggle navigation</span>
-  	        <span class="icon-bar"></span>
-  	        <span class="icon-bar"></span>
-  	        <span class="icon-bar"></span>
-  	      </button>
-  				<a href="#" class="navbar-brand"><i class="far fa-image"></i> Canete</a>
-  			</div>
-  			<div class="collapse navbar-collapse" id="bs-nav-demo">
-  				<ul class="nav navbar-nav">
-  					<li><a href="#">About</a></li>
-  					<li><a href="#">Contact</a></li>
-  				</ul>
-  				<ul class="nav navbar-nav navbar-right">
-  					<li><a href="#">Sign Up</a></li>
-  					<li><a href="#">Login</a></li>
-  				</ul>
-  			</div>
-  		</div>
-  	</nav>
+    <h1><span id="p1Disp">0</span> to <span id="p2Disp">0</span></h1>
+     <p>Playing to <span>5</span></p>
+     <input type="number" name="" value="">
+     <button type="button" name="button" id="p1">Player One</button>
+     <button type="button" name="button" id="p2">Player Two</button>
+     <button type="button" name="button" id="rst">Reset</button>
 
-    <div class="container">
-      <div class="jumbotron">
-        <h1><i class="fas fa-camera-retro"></i> Image Gallery</h1>
-        <p>This are some pictures I didn't take.</p>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image1">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image2">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image3">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image4">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image5">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image6">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image7">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image8">
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 col-xs-12">
-          <div class="thumbnail">
-            <div class="image image9">
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+     <script type="text/javascript" src="scoreKeep.js"></script>
   </body>
 </html>
