--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <body>
   <h1>The Great <br> <span id="colorDisp">RGB</span> <br>Color Game</h1>
   <div id="stripe">
-    <button id="reset">New Colors</button>
-    <span id="message"></span>
+    <button id="reset">Restart</button>
+    <span id="message">Guesses Left: <span id="guesses"></span> </span>
+    <span id="scoreDisp">Score: <span id="scored"></span> </span>
     <button id="easyBtn">Easy</button>
-    <button id="hardBtn" class="selected">Hard</button>
+    <button id="mediumBtn" class="selected">Medium</button>
+    <button id="hardBtn">Hard</button>
   </div>
 
   <div id="container">
