--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h1>The Great <br> <span id="colorDisp">RGB</span> <br>Color Game</h1>
   <div id="stripe">
     <button id="reset">Restart</button>
-    <span id="message">Guesses Left: <span id="guesses"></span> </span>
-    <span id="scoreDisp">Score: <span id="scored"></span> </span>
+  <div id="dispContainer">  <span id="message">Guesses Left: <span id="guesses"></span> </span>
+    <span id="scoreDisp">Score: <span id="scored"></span> </span></div>
     <button id="easyBtn">Easy</button>
     <button id="mediumBtn" class="selected">Medium</button>
     <button id="hardBtn">Hard</button>
