--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> RGB Color Game</title>
   </head>
   <body>
-  <h1>The Great <br> <span id="colorDisp">RGB</span> <br>Color Game</h1>
+  <h1> <span id = "tag1">The Great</span> <br> <span id="colorDisp">RGB</span> <br> <span id = "tag2">Color Game</span> </h1>
   <div id="stripe">
     <button id="reset">Restart</button>
   <div id="dispContainer">  <span id="message">Guesses Left: <span id="guesses"></span> </span>
