--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/todos.css">
-    <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.js"></script>
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title> RGB Color Game</title>
   </head>
   <body>
+  <h1> <span id = "tag1">The Great</span> <br> <span id="colorDisp">RGB</span> <br> <span id = "tag2">Color Game</span> </h1>
+  <div id="stripe">
+    <button id="reset">Restart</button>
+  <div id="dispContainer">  <span id="message">Guesses Left: <span id="guesses"></span> </span>
+    <span id="scoreDisp">Score: <span id="scored"></span> </span></div>
+    <button id="easyBtn">Easy</button>
+    <button id="mediumBtn" class="selected">Medium</button>
+    <button id="hardBtn">Hard</button>
+  </div>
 
   <div id="container">
-    <h1>TO-DO List <i class="fas fa-plus"></i></h1>
-    <input type="text" name="" value="" placeholder="Add New Todo">
-
-    <ul>
-      <li><span><i class="far fa-trash-alt"></i></span> Hacer deberes</li>
-      <li><span><i class="far fa-trash-alt"></i></span> Ir a tenis</li>
-      <li><span><i class="far fa-trash-alt"></i></span> Sacar al perro</li>
-    </ul>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
   </div>
 
 
-  <script type="text/javascript" src="assets/js/todos.js"></script>
+  <script type="text/javascript" src="game.js"></script>
   </body>
 </html>
